--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "test-api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "npx json-server --watch db.json"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
+    "cors": "^2.8.5"
+  },
+  "devDependencies": {
     "json-server": "^1.0.0-beta.1"
-  }
+  },
+  "description": ""
 }
